# freeze-drip-terminal

./: .gitignore  README.md  freeze-drip-terminal-desktop.spec  pyproject.toml
